--- a/galaxy/templates/configmap-initdb.yaml
+++ b/galaxy/templates/configmap-initdb.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ $fullName }}-initdb
+  name: galaxy-initdb
   labels:
     app: {{ template "galaxy.name" . }}
     chart: {{ template "galaxy.chart" . }}
