--- a/galaxy/templates/configmap-galaxy-conf.yaml
+++ b/galaxy/templates/configmap-galaxy-conf.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
-kind: Secret
-type: Opaque
+kind: ConfigMap
 metadata:
-  name: {{ include "galaxy.fullname" . }}-configs
+  name: {{ include "galaxy.fullname" . }}-config-map
   labels:
     app.kubernetes.io/name: {{ include "galaxy.name" . }}
     helm.sh/chart: {{ include "galaxy.chart" . }}
@@ -13,7 +12,7 @@ metadata:
 # - potential newlines inside templatable expressions. These newlines
 #   are added by 'toYaml' when there is whitespace in a long line and
 #.  confuse 'tpl'
-stringData:
+data:
   {{- range $key, $entry := .Values.configs -}}
   {{- if $entry -}}
   {{- $key | nindent 2 }}: |
