--- a/galaxy/templates/configmap-initdb.yaml
+++ b/galaxy/templates/configmap-initdb.yaml
@@ -1,6 +1,5 @@
 apiVersion: v1
-kind: Secret
-type: Opaque
+kind: ConfigMap
 metadata:
   name: {{ .Release.Name }}-galaxy-initdb
   labels:
@@ -8,8 +7,8 @@ metadata:
     helm.sh/chart: {{ include "galaxy.chart" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-stringData:
+data:
   {{- $root := . }}
   {{ range $path, $bytes := .Files.Glob "files/conf.d/*" }}
-    {{- base $path }}: {{ tpl ($root.Files.Get $path) $ | quote }}
+    {{- base $path }}: {{ $root.Files.Get $path | quote }}
   {{ end }}
